tests/fail/sock6.rs
use net_macros::sock6;

fn main() {
    let a = sock6!("2001:db8::32::23:22");
}
